crates/stef-compiler/tests/inputs/validate/enum_named_tuple_empty.stef
enum Sample {
    One @1,
    Two {
        field: () @1,
    } @2,
}
