crates/stef-compiler/tests/inputs/invalid/enum_named_dup_id.stef
enum Sample {
    One @1,
    Two {
        field1: string @1,
        field2: string @1,
    } @2,
}
